Depricated methods in SecurityConfig fixed